fixed navbar overlapping content

--- a/src/styles/listPage.css
+++ b/src/styles/listPage.css
@@ -1,6 +1,6 @@
 
 .row {
-    margin-top: 2rem;
+    margin: 2rem 0;
     row-gap: 2rem;
 }
 
